# DoobieLogic

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  streamlit_admin.py  streamlit_app.py
.streamlit/: config.toml
assets/: README.md
data/: public_knowledge_seed.json  sample_compliance_ops.csv  sample_cultivation_ops.csv  sample_extraction_ops.csv  sample_inventory.csv  sample_kitchen_ops.csv  sample_packaging_ops.csv
docs/: BUYER_APP_BRIDGE.md  KNOWLEDGE_REQUIREMENTS.md  deployment_architecture.md  licensing.md  postgres_persistence.md  render_postgres_setup.md
doobielogic/: __init__.py  admin_auth.py  admin_gateway.py  api.py  api_v2.py  api_v3.py  api_v4.py  assistant.py  branding.py  buyer_brain.py  buyer_dashboard_adapter.py  cannabis_intelligence.py  commercial_layer_v1.py  community.py  compliance_models.py  compliance_ops.py  config.py  copilot.py  copilot_file_patch.py  copilot_v2.py  cultivation_models.py  cultivation_ops.py  dashboard.py  dashboard_support.py  department_knowledge.py  department_parsers.py  department_router.py  doobie_dashboard_bridge.py  engine.py  evals.py  extraction_dashboard_support.py  extraction_models.py  extraction_ops.py  extraction_science_v2.py  intelligence_v2.py  intelligence_v3.py  key_management.py  kitchen_models.py  kitchen_ops.py  knowledge.py  (+26 more)
doobielogic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
intel/: buyer_intel.json  compliance_intel.json  extraction_intel.json  financial_intel.json  operations_intel.json  product_taxonomy.json
pages/: 1_Key_Management.py
(+32 files in other folders)
