[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doobielogic"
version = "0.1.1"
description = "Standalone Cannabis AI logic and sales API integration service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.setuptools]
packages = ["doobielogic"]

[tool.setuptools.package-data]
doobielogic = ["assets/*.svg", "assets/*.png", "assets/*.md"]
